# tinyfetch

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  test.yml
pythonfetch/: __init__.py
pythonfetch/data/: ascii-art.txt  blocks-art.txt
src/tinyfetch/: __init__.py  cli.py  core.py  module.py
tests/: test.py
